--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate-latest": "npx knex migrate:latest --knexfile src/db/knexfile.js && npx knex seed:run --knexfile src/db/knexfile.js",
     "migrate-down": "npx knex migrate:down --knexfile src/db/knexfile.js",
     "seed-data": "npx knex seed:run --knexfile src/db/knexfile.js",
-    "test": "mocha --exit"
+    "test": "npm run migrate-down && npm run migrate-latest && mocha --exit"
   },
   "keywords": [],
   "author": "",
