--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
+    "build" : "npm install && npm run migrate-latest && npm run seed-data",
     "db:migrate-make": "npx knex migrate:make create_seats_table --knexfile ./src/db/knexfile.js",
     "migrate-latest": "npx knex migrate:latest --knexfile src/db/knexfile.js && npx knex seed:run --knexfile src/db/knexfile.js",
     "migrate-down": "npx knex migrate:down --knexfile src/db/knexfile.js",
     "seed-data": "npx knex seed:run --knexfile src/db/knexfile.js",
-    "test": "npm run migrate-down && npm run migrate-latest && mocha --exit"
+    "test": "npm run migrate-down && npm run migrate-latest && mocha --exit",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
