--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "build" : "npm install && npm run migrate-latest && npm run seed-data",
+    "build": "npm install && npm run migrate-latest && npm run seed-data",
     "db:migrate-make": "npx knex migrate:make create_seats_table --knexfile ./src/db/knexfile.js",
     "migrate-latest": "npx knex migrate:latest --knexfile src/db/knexfile.js && npx knex seed:run --knexfile src/db/knexfile.js",
     "migrate-down": "npx knex migrate:down --knexfile src/db/knexfile.js",
@@ -20,7 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "knex": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
