--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -14,7 +14,8 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -25,6 +26,5 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.2"
   }
 }
